@@ -38,7 +38,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
 /**
@@ -234,7 +233,7 @@ public class TestableSourceConnector extends SampleSourceConnector {
                             maybeDefineTransactionBoundary(record);
                             return record;
                         })
-                        .collect(Collectors.toList());
+                        .toList();
             }
             return null;
         }
